# fast_read_optimizer

./: .gitignore  Cargo.toml  GEMINI.md  README.md  TODO.md  VERIFICATION.md  fast_read.c  fast_read_optimizer.json  fro-device-db.json  fro.json  history.md
.githooks/: pre-commit
.github/: copilot-instructions.md
docs/: API.md  profiling.md  verification.md
docs/architecture/: src-tree.txt
examples/: b3sum.rs  dd.rs  hw_sha256.rs  model_loader.rs  parallel_zstd.rs  sha256sum.rs
janitor/: Cargo.toml
janitor/src/: config.rs  main.rs
perf/: corrupt_recover_demo_copies.sh  perf_stat.sh  perf_stat2.sh  perf_stat3.sh  perf_stat4.sh  perf_stat6.sh  perf_stat_diff_hot.sh  perf_stat_grep.sh  recover_demo.sh
src/: api.rs  blake3_hash.rs  block_hash.rs  common.rs  config.rs  coreutils.rs  differ.rs  file_hash.rs  io_util.rs  lib.rs  main.rs  mincore.rs  optimizer.rs  reader.rs  stream.rs  verified_copy.rs  writer.rs
tests/: cli_matrix.rs  compatibility_matrix.rs  coreutils_compat_matrix.rs  coreutils_multicall.rs  dd_example_compat.rs  find_cli.rs  hash_cli.rs  optimize_all_config.rs  property_models.rs  public_api.rs  read_cli.rs  smoke_runs.rs  verified_copy.rs  write_cli.rs
