[package]
name = "fro"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
io-uring = "0.5"
iou = "0.3.3"
libc = "0.2.137"
memchr = "2.5"
rand = "0.8.5"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }
