[package]
name = "fro"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake3 = { version = "1.8", features = ["mmap", "rayon"] }
io-uring = "0.7.11"
iou = "0.3.3"
libc = "0.2.137"
memchr = "2.5"
openssl = "0.10"
rand = "0.10.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10"
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }
zstd = "0.13"

[dev-dependencies]
proptest = "1"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }
